[gd_scene load_steps=3 format=3 uid="uid://thuu68uwecqi"]

[ext_resource type="Texture2D" uid="uid://ciufn6fm38o7i" path="res://assets/UI/FacesetBox.png" id="1_k6gyq"]
[ext_resource type="Script" path="res://scripts/inventory_slot.gd" id="1_vl6dh"]

[node name="InventorySlot" type="BoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_vl6dh")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture = ExtResource("1_k6gyq")

[node name="MenuButton" type="MenuButton" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="NinePatchRect/MenuButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/MenuButton/CenterContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
expand_mode = 2
stretch_mode = 5

[node name="OnClickButton" type="Button" parent="NinePatchRect"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="StacksLabel" type="Label" parent="NinePatchRect"]
layout_mode = 2
anchor_left = 1.0
anchor_top = 0.967
anchor_right = 1.0
anchor_bottom = 0.967
offset_left = -26.0
offset_top = -23.02
offset_right = -7.0
offset_bottom = -0.0200043
text = "12"

[node name="NameLabel" type="Label" parent="."]
layout_mode = 2

[node name="PriceLabel" type="Label" parent="."]
visible = false
layout_mode = 2
